--- a/BMI_Calculator/index.html
+++ b/BMI_Calculator/index.html
@@ -19,7 +19,9 @@
                 <input type="text" id="height">
             </div>
         </form>
+        <button class="btn">Calculate</button>
         <p class="result">Result</p>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
