--- a/BMI_Calculator/index.html
+++ b/BMI_Calculator/index.html
@@ -20,7 +20,7 @@
             </div>
         </form>
         <button class="btn">Calculate</button>
-        <p class="result">Result</p>
+        <p class="result"></p>
     </div>
     <script src="app.js"></script>
 </body>
